--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="sans-serif">
+    <div class="avenir">
 
       <!-- If there is an error, this box is shown. 'dn' is the only required class -->
       <div id="error" class="dn bg-red white pa4 fixed bottom-0 w-100">
@@ -31,24 +31,30 @@
       </form>
 
       <!-- Content -->
-<div class="icon w4 h4">
-</div>
 
-      <div class="flex flex-wrap pa4">
-        <div class="w-100 w-50-m w-third-l">
-          <h2>Location</h2>
-          <p>City: <span id="location-name"></span></p>
-          <p>Country: <span id="country"></span></p>
+<div class="flex flex-wrap">
+  <div class="w-40">
+  </div>
+        <div class="tc pa4 w-20 ba br3">
+          <h2 class="ma0 f5 ttu tracked">Location</h2>
+          <p class="ma0 tc"><span class="f1" id="location-name"></span></p>
+          <p class="ma0"><span class="f3" id="country"></span></p>
         </div>
 
-        <div class="w-100 w-50-m w-third-l">
+        <div class="w-40">
+        </div>
+    </div>
+
+
+  <div class="flex flex-wrap pa4 justify-around pt0">
+        <div class="w-100 w-50-ns tc">
           <h2>Temperature</h2>
-          <p>Current Temp: <span id="temp"></span></p>
-          <p>Max Temp: <span id="temp-max"></span></p>
-          <p>Min Temp: <span id="temp-min"></span></p>
+          <p><span class="f-headline-ns f1"> <span id="temp"></span> &deg;F </span></p>
+          <p>H: <span id="temp-max"></span>&deg;F</p>
+          <p>L: <span id="temp-min"></span>&deg;F</p>
         </div>
 
-        <div class="w-100 w-50-m w-third-l">
+        <div class="w-100 w-50-ns tc">
           <h2>Weather</h2>
           <p>Condition: <span id="condition"></span></p>
           <p>Desription: <span id="condition-description"></span></p>
