--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <!-- Set a page title -->
-    <title>Weather</title>
+    <title>Lola's Weather App</title>
 
     <!-- Site Styles -->
     <link rel="stylesheet" href="/css/tachyons.min.css">
@@ -65,8 +65,8 @@
 
   <!--LOCATION-->
             <div class="flex flex-column items-center justify-center pa5 locate">
-              <div class="ttu tracked">location</div>
-              <div class="flex flex-row justify-center f2">
+              <div class="ttu tracked tc">location</div>
+              <div class="flex flex-row-ns flex-column tc justify-center f2">
                 <p class="ma0 pl3 pr1 f1"><span class="" id="location-name"></span>,</p>
                 <p class="ma0 f1"><span class="" id="country"></span></p>
               </div>
@@ -175,9 +175,9 @@
 
           <div class="flex flex-row-ns flex-column center f6 justify-between pv4">
 
-<a class="link black hover-hot-pink" href="lola.html"><div class="tc ma3 ba br3 ph2"><p>lola's wardrobe</p></div></a>
-<a class="link black hover-hot-pink" href="http://caseybowser.com">
-<div class="tc ma3 ba br3 ph2">  <p>contact designer</p></div></a>
+<a class="link black hover-dark-blue" href="lola.html"><div class="f5 tc ma3 ba br3 ph2"><p>lola's wardrobe</p></div></a>
+<a class="link black hover-dark-blue" href="http://caseybowser.com">
+<div class="tc ma3 ba br3 ph2 f5">  <p>contact designer</p></div></a>
 </div>
 
 </div>
