--- a/lola.html
+++ b/lola.html
@@ -19,7 +19,7 @@
   <body>
     <div class="montserrat">
 
-      <div class="ph4 ph0-ns"><h2 class="f-subheadline-ns f1 mb6-ns tc">Lola's Wardrobe</h2></div>
+      <div class="ph4 ph0-ns"><h2 class="f1 mb6-ns tc">Lola's Wardrobe</h2></div>
 
 <div class="flex flex-row-ns flex-column items-center f6 tc">
 
