--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </div>
 
                 <!--LOLA IMAAGE-->
-                <div class="nl4 lolabean">
+                <div class="lolabean">
                   <!--CLOUD ANIMATION-->
                   <div class="cloudyday">
                   </div>
