--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 
-<div class="ph3 tc"><h1 class="f1-ns ">What should I wear today, Lola?</h1></div>
+<div class="ph3 tc"><h1 class="f1-ns avenir fw5">What should I wear today, Lola?</h1></div>
 
 
 
