--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <div class="flex flex-row-ns flex-column center f6 justify-between pv4">
 
 <a class="link black hover-dark-blue" href="lola.html"><div class="f5 tc ma3 ba br3 ph2"><p>lola's wardrobe</p></div></a>
-<a class="link black hover-dark-blue" href="http://caseybowser.com">
+<a class="link black hover-dark-blue" href="https://cbowser-portfolio.netlify.com/">
 <div class="tc ma3 ba br3 ph2 f5">  <p>contact designer</p></div></a>
 </div>
 
