updated lolas title

--- a/lola.html
+++ b/lola.html
@@ -9,7 +9,7 @@
 
 
     <!-- Set a page title -->
-    <title>Weather</title>
+    <title>Lola's Wardrobe</title>
 
     <!-- Site Styles -->
     <link rel="stylesheet" href="/css/tachyons.min.css">
