--- a/lola.html
+++ b/lola.html
@@ -16,60 +16,69 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
 
-  <body>
+<body class="lolapage">
     <div class="montserrat">
 
-      <div class="ph4 ph0-ns"><h2 class="f1 mb6-ns tc avenir fw5">Lola's Wardrobe</h2></div>
-
-<div class="flex flex-row-ns flex-column items-center f6 tc">
-
-
-    <div class="w-25-l ph3 flex flex-column-ns flex-column-reverse">
- <img class="mw-100" src="images/lolacold.png" alt="">
- <div class="flex flex-column">
-   <p class="f2 roboto mb0">01</p>
-   <h2 class="pa3 mt0">Cold Lola</h2></div>
- </div>
 
 
 
-      <div class="w-25-l ph3 flex flex-column-ns flex-column-reverse">
-   <img class="mw-100" src="images/rainlola2.png" alt="">
-   <div class="flex flex-column">
-     <p class="f2 roboto mb0">02</p>
-     <h2 class="pa3 mt0">Rainy Day Lola</h2></div>
-   </div>
+
+      <div class="ph4 ph0-ns w-40-ns center"><h2 class="f1 tc avenir fw5 pa3">Lola's Wardrobe</h2></div>
+
+<div class="flex flex-row-ns flex-column tc">
+  <div class="ph3 flex flex-column-ns flex-column">
+  <div class=""><img class="mw-100" src="images/lolacold.png" alt=""></div>
+            <div class="flex flex-column tc">
+              <h2 class="pa3 mt0 f4">Cold Lola</h2></div>
+            </div>
 
 
-      <div class="w-25-l ph3 pt6-ns flex flex-column-ns flex-column-reverse">
-      <img class="mw-100" src="images/lolahot.png" alt="">
-      <div class="flex flex-column">
-        <p class="f2 roboto mb0">03</p>
-        <h2 class="pa3 mt0">Hot Lola</h2></div>
-      </div>
+            <div class="ph3 flex flex-column-ns flex-column-reverse">
+                    <h2 class="pa3 mt0 f4">Rainy Day Lola</h2>
+  <div class=""><img class="mw-100" src="images/rainlola2.png"   alt="">  </div>
+
+</div>
+
+          <div class="ph3 flex flex-column-ns flex-column">
+  <div class=""><img class="mw-100" src="images/lolahot.png" alt=""></div>
+  <div class="flex flex-column tc">
+    <h2 class="pa3 mt0 f4">Hot Lola</h2></div>
+  </div>
 
 
 
-        <div class="w-25-l ph3 flex flex-column-ns flex-column-reverse">
-        <img class="mw-100" src="images/lolacloud.png" alt="">
-        <div class="flex flex-column">
-          <p class="f2 roboto mb0">04</p>
-          <h2 class="pa3 mt0">Sweater Weather Lola</h2></div>
-        </div>
+        <div class="ph3 flex flex-column-ns flex-column-reverse">
+  <h2 class="pa3 mt0 f4">Sweater Weather Lola</h2>
+    <div class="">  <img class="mw-100" src="images/lolacloud.png" alt=""></div>
 
-
-
-        </div>
+</div>
 
 
 
 
 
-<a class="link" href="index.html"><div class="ba br3 w4 tc pa3 ma3 mt5 center ba black hover-hot-pink">  <p class="pa0 ma0">back</p>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<a class="link" href="index.html"><div class="grow ba br3 w4 tc pa3 ma3 mt5 center ba black hover-navy avenir">  <p class="pa0 ma0">back</p>
 
 </div></a>
 
-</div>
 
     <!-- Site JavaScript -->
     <script src="/javascript/toggleClass.js" charset="utf-8"></script>
