updating div size of lolabean

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
 <!--THIS ACTS AS THE BODY CONTAINER-->
-    <div class="montserrat">
+    <div class="montserrat pa0 ma0">
 
 
   <!-- If there is an error, this box is shown. 'dn' is the only required class -->
@@ -48,8 +48,8 @@
                         <h1 class="flex flex-wrap items-baseline">
                           <span class="f4">
                           </span>
-                          <input type="text" id="area" value="Boston" class="flex-auto f4 avenir pa1">
-                          <button class="btn f3 ph3 avenir pointer bg-transparent black">&#8594;</button>
+                          <input type="text" id="area" value="Boston" class="flex-auto f5 avenir pa1">
+                          <button class="btn avenir pointer bg-transparent black"> <img class="h1" src="/images/magnify.png" alt=""> </button>
                         </h1>
                       </form>
                     </div>
@@ -63,7 +63,7 @@
 
 <!--TEMPERATURE "stage"-->
 
-<div class="flex flex-row-ns flex-column-reverse items-center pa3 wardrobe justify-around">
+<div class="flex flex-row-ns flex-column-reverse items-center wardrobe justify-around">
 
 
 <!--TEMPERATURE & LOCATION SIDE - LEFT OF LOLA -->
@@ -74,7 +74,7 @@
                 <p class="ma0 f5-ns f6 ttu"><span class="" id="country"></span></p>
               </div>
           <!--TEMPERATURE-->
-              <h2 class="ma0 f-headline-ns f-subheadline tc"><span class=""> <span id="temp"></span> &deg;F </span></h2>
+              <h2 class="ma0 avenir fw4 f-headline-ns f-subheadline tc"><span class=""> <span id="temp"></span> &deg;F </span></h2>
 
               <div class="flex flex-row items-center justify-center tc">
                 <p class="f3-ns f4 ph3">&#8593; <span id="temp-max"></span>&deg;F</p>
@@ -93,7 +93,7 @@
 <!--LOLA AND ANIMATIONS-->
 
 
-  <div class="lolabean w-50-ns mt5 mv0-ns">
+  <div class="lolabean w-50-ns mv5 mh0 pa0">
 
     <!--CLOUD ANIMATION-->
     <div class="cloudyday">
