--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
 
 <!--TEMPERATURE "stage"-->
 
-<div class="flex flex-row-ns flex-column-reverse items-center wardrobe justify-around">
+<div class="flex flex-row-ns flex-column-reverse items-center wardrobe">
 
 
 <!--TEMPERATURE & LOCATION SIDE - LEFT OF LOLA -->
-        <div class="flex flex-column w-50-ns">
+        <div class="flex flex-column temp ma0">
           <!--LOCATION-->
-              <div class="flex flex-row tc justify-center avenir fw4 mb3-ns mt5 mt0-ns">
-                <p class="ma0 pr1 f5-ns f6 ttu"><span class="" id="location-name"></span>,</p>
-                <p class="ma0 f5-ns f6 ttu"><span class="" id="country"></span></p>
+              <div class="flex flex-row tc justify-center avenir fw4">
+                <p class="ma0 pr1 f6-ns f7 ttu"><span class="" id="location-name"></span>,</p>
+                <p class="ma0 f6-ns f7 ttu"><span class="" id="country"></span></p>
               </div>
           <!--TEMPERATURE-->
               <h2 class="ma0 avenir fw4 f-headline-ns f-subheadline tc"><span class=""> <span id="temp"></span> &deg;F </span></h2>
 
-              <div class="flex flex-row items-center justify-center tc">
-                <p class="f3-ns f4 ph3">&#8593; <span id="temp-max"></span>&deg;F</p>
-                <p class="f3-ns f4 ph3">&#8595; <span id="temp-min"></span>&deg;F</p>
+              <div class="flex flex-row items-center justify-center tc fw4 avenir">
+                <p class="mt1 f7 ph3">&#8593; <span id="temp-max"></span>&deg;F</p>
+                <p class="mt1 f7 ph3">&#8595; <span id="temp-min"></span>&deg;F</p>
               </div>
 
 
@@ -93,7 +93,7 @@
 <!--LOLA AND ANIMATIONS-->
 
 
-  <div class="lolabean w-50-ns mv5 mh0 pa0">
+  <div class="lolabean w-75-ns mv5-ns">
 
     <!--CLOUD ANIMATION-->
     <div class="cloudyday">
