--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 <!--TEMPERATURE & LOCATION SIDE - LEFT OF LOLA -->
-        <div class="flex flex-column temp ma0">
+        <div class="flex flex-column temp ma0 w-50-ns">
           <!--LOCATION-->
               <div class="flex flex-row tc justify-center avenir fw4">
                 <p class="ma0 pr1 f6-ns f7 ttu"><span class="" id="location-name"></span>,</p>
