--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <a class="w-25-ns f5-ns f6 center grow no-underline br-pill ph3 pv2 black hover-navy avenir" href="lola.html"><div class="tc ba br3 ph2"><p>Lola's Wardrobe</p></div></a>
 
 
-<a  class="no-underline black mb0 pb0 pt4 f7" href="https://cbowser-portfolio.netlify.com/">
+<a  class="no-underline black mb0 pb0 pt4 f7" href="https://caseybowser.netlify.com/">
 <div class="t2 tc">Created by Casey</div></a>
 
 </div>
